# zkfs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKREF.md  README.md  TAB_COMPLETE.md  demo.sh  example-config.json
.github/: ACTIONS.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml  security.yml
src/: main.rs
