[package]
name = "zkfs"
version = "0.1.0"
edition = "2021"
authors = ["zkfs contributors"]
description = "A Zookeeper command-line tool with Linux-like file system commands"
repository = "https://github.com/ng-life/zkfs"
license = "MIT"
keywords = ["zookeeper", "cli", "filesystem", "distributed"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
zookeeper-client = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
